--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -1,94 +1,52 @@
-    {% load staticfiles %}
+ {% load static %}
 
 <html lang="en">
 <head>
-    <title>Eagle Financial Services</title>
+<title>Eagle Financial Services</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-        }
+    <title>Eagle Financial Services</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</head>
 
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {
-            height: 450px
-        }
-
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: #f1f1f1;
+ <style>
+        body,html{
             height: 100%;
+            margin: 0;
+            background: #7F7FD5;
+            background: -webkit-linear-gradient(to right, #ffffff, #ffffff);
+            background: linear-gradient(to right, #ffffff, #de9404);
         }
-
-        /* Set black background color, white text and some padding */
-        footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-        }
-
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-
-            .row.content {
-                height: auto;
-            }
+        #events_card{
+            padding-bottom: 40px;
         }
     </style>
-</head>
-<body id="app-layout">
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
+<body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
-            <!-- Collapsed Hamburger -->
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#myNavbar">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <!-- Branding Image -->
-            <a class="navbar-brand" href="/">
-                <b>Eagle Financial Services</b>
-            </a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'portfolio:home' %}"><b><u>Home</u></b></a></li>
-                <li><a href="{% url 'portfolio:customer_list' %}"><b><u>Customers</u></b></a></li>
-                <li><a href="{% url 'portfolio:investment_list' %}"><b><u>Investment</u></b></a></li>
-                <li><a href="{% url 'portfolio:stock_list' %}"><b><u>Stocks</u></b></a></li>
-                <li><a href="{% url 'portfolio:mutualfund_list' %}"><b><u>Mutual Funds</u></b></a></li>
+        <a href="/" class="navbar-brand">Eagle Financial Services</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:home' %}">Home</a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:customer_list' %}">Customers</a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:investment_list' %}">Investment</a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:stock_list' %}">Stocks</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            <b>MY ACCOUNT</b> <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i><b><u>Logout</u></b></a></li>
-                        </ul>
-                    </li>
+
+                    <li><a class="nav-link lead" href="{% url 'logout' %}"><span class="fa fa-btn fa-sign-out"></span>Logout</a></li>
                 {% else %}
-                    <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span><b><u>Login</u></b> </a></li>
-                <li><a href="{% url 'password_reset' %}"><b><u>Forgot Password?</u></b></a></li>
-                <li><a href="{% url 'portfolio:signup' %}"><b><u>Sign Up</u></b></a></li>
+                    <li><a class="nav-link lead" href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+                <li><a class="nav-link lead" href="{% url 'portfolio:signup' %}">Sign Up</a></li>
                 {% endif %}
 
             </ul>
@@ -142,17 +100,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class="thumbnail">
-                              <img src="{% static "images/mutualfunds.png" %}" alt="mutualfunds"/>
-                                <div class="caption">
-                                    <h2>Mutual Funds</h2>
-                                    <p>We value your future the way you do.</p>
-                                    <p><a class="btn btn-default" href="{% url 'portfolio:mutualfund_list' %}" role="button">View
-                                        details &raquo;</a></p>
-                                </div>
-                            </div>
-                        </div>
+
 
                     </div>
                 </div>
@@ -160,5 +108,9 @@
         </div>
     </div>
 </div>
+
+</div>
+
 </body>
+
 </html>
