--- a/portfolio/templates/portfolio/customer_delete.html
+++ b/portfolio/templates/portfolio/customer_delete.html
@@ -1,12 +1,9 @@
 {% extends 'portfolio/base.html' %}
-{% block body_block %}
 
-
-    <h1>Delete {{ customer.name }}?</h1>
-
-    <form method="post">
-        {% csrf_token %}
-        <input type="submit" class="btn btn-danger" value="Delete">
-        <a href="{% url 'portfolio:home' pk=customer.cust_number %} ">Cancel</a>
+{% block content %}
+    <h1>Delete</h1>
+    <form action="" method="post">{% csrf_token %}
+      <p>Are you sure you want to delete "{{ customer.name }}"?</p>
+      <button class="btn btn-danger ml-2" type="submit">Confirm</button>
     </form>
-{% endblock %}
+{% endblock content %}
