--- a/portfolio/templates/portfolio/customer_edit.html
+++ b/portfolio/templates/portfolio/customer_edit.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<body style="background-color:pink;">
+
 
     <h1>Edit Customer</h1>
-    <form method="POST" class="customer-form">{% csrf_token %}
-        {{ form|crispy }}
+       <form action="" method="post">{% csrf_token %}
+        {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Update</button>
     </form>
 </body>
