--- a/portfolio/templates/portfolio/investment_list.html
+++ b/portfolio/templates/portfolio/investment_list.html
@@ -3,37 +3,22 @@
     <html>
     <body style="background-color:pink;">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Eagle Financial</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-    </head>
     <body>
     <style>
         body {
             background-color: beige;
         }
     </style>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Welcome!</div>
-                    <div class="panel-body">
-                        <b>Eagle Financial Services, your Midwest Financial Services Partner.</b>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <header class="jumbotron my-4 table-responsive" style="background: white">
+      <p class="lead text-nowrap"><b>Eagle Financial Services, your Midwest Financial Services Partner</b></p>
+         </header>
     <div class="row">
         <h2 style="padding-left: 15Px"><u>Investment Information</u></h2>
     </div>
     <div>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-hover table-responsive-xl lead text-center">
             <thead>
-            <tr class="bg-info">
+            <tr bgcolor="white">
                 <th>Customer number</th>
                 <th>Category</th>
                 <th>Description</th>
@@ -46,7 +31,7 @@
             </thead>
             <tbody>
             {% for investment in investments %}
-                <tr>
+                <tr bgcolor="white">
                     <td>{{ investment.customer }}</td>
                     <td>{{ investment.category }}</td>
                     <td>{{ investment.description }}</td>
@@ -56,7 +41,7 @@
                     <td>{{ investment.recent_date }}</td>
                     <td><a href="{% url 'portfolio:investment_edit' pk=investment.pk %}"
                            class="btn btn-warning">Edit</a></td>
-                    <td><a href="{% url 'portfolio:investment_delete' pk=investment.pk %}" 
+                    <td><a href="{% url 'portfolio:investment_delete' pk=investment.pk %}"
                     onclick="return confirm('Are you sure you want to delete?')"
                            class="btn btn-danger">Delete</a>
                     </td>
