--- a/portfolio/templates/portfolio/investment_new.html
+++ b/portfolio/templates/portfolio/investment_new.html
@@ -1,11 +1,12 @@
 {% extends 'portfolio/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<body style="background-color:pink;">
+<body >
 
     <h1>Add a New Investment</h1>
     <form method="POST" class="investment-form">{% csrf_token %}
-          {{ form|crispy }}
+   {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
 {% endblock %}
+
