--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -1,5 +1,5 @@
 {% extends 'portfolio/base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% load mathfilters %}
 {% load humanize %}
 {% block content %}
@@ -153,60 +153,6 @@
             </tbody>
         </table>
     </div>
-    <div class="row">
-        <h2 style="padding-left: 15Px">Mutual Funds Information</h2>
-    </div>
-    <div class="row">
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-            <tr class="bg-info">
-                <th>Customer</th>
-                <th>Customer Name</th>
-                <th>Symbol</th>
-                <th>Description</th>
-                <th>Shares</th>
-                <th>Acquired Value</th>
-                <th>Acquired Date</th>
-                <th>Recent Value</th>
-                <th>Recent Date</th>
-                <th>Results</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for mutualfund in mutualfunds %}
-                <tr>
-                    <td>{{ mutualfund.customer }}</td>
-                    <td>{{ mutualfund.customer.name}}</td>
-                    <td>{{ mutualfund.symbol }}</td>
-                    <td>{{ mutualfund.description }}</td>
-                    <td>{{ mutualfund.shares|intcomma }}</td>
-                    <td>{{ mutualfund.acquired_value|intcomma }}</td>
-                    <td>{{ mutualfund.acquired_date }}</td>
-                    <td>{{ mutualfund.recent_value|intcomma }}</td>
-                    <td>{{ mutualfund.recent_date }}</td>
-                    <td>{{ mutualfund.recent_value  |sub:mutualfund.acquired_value |intcomma }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <div class="row">
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr class="bg-info">
-                    <th>Total of Initial Mutual Funds</th>
-                    <th>Total of Current Mutual Funds</th>
-                    <th>Results</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ sum_mutual_acquired_value.acquired_value__sum |intcomma}}</td>
-                    <td>{{ sum_mutual_recent_value.recent_value__sum |intcomma}}</td>
-                    <td>{{ sum_mutual_recent_value.recent_value__sum |sub:sum_mutual_acquired_value.acquired_value__sum |intcomma }}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+
 </div>
 {% endblock %}
