--- a/portfolio/templates/portfolio/signup.html
+++ b/portfolio/templates/portfolio/signup.html
@@ -1,18 +1,14 @@
 {% extends 'portfolio/base.html' %}
-
+{% load crispy_forms_tags %}
+{% block title %}Sign Up{% endblock title %}
 {% block content %}
-<body style="background-color:pink;">
+<body style="background-color:white;">
   <h1>Sign up</h1>
 
-  <BR>
-  <br>
-  <br>
-  <br>
 
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
-</body>
-{% endblock %}
+   {{ form|crispy }}
+<button class="btn btn-success" type="submit">Sign Up</button>
+</form>
+{% endblock content %}
