--- a/portfolio/templates/portfolio/stock_list.html
+++ b/portfolio/templates/portfolio/stock_list.html
@@ -1,39 +1,25 @@
 {% extends 'portfolio/base.html' %}
 {% block content %}
-    <html>
-    <body style="background-color:pink;">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Eagle Financial</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<html lang="en">
+    <body>
 
-    </head>
     <body>
     <style>
         body {
             background-color: beige;
         }
     </style>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">Welcome!</div>
-                    <div class="panel-body">
-                        <b>Eagle Financial Services, your Midwest Financial Services Partner.</b>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <header class="jumbotron my-4 table-responsive" style="background: white">
+      <p class="lead text-nowrap"><b>Eagle Financial Services, your Midwest Financial Services Partner</b></p>
+         </header>
     <div class="row">
         <h2 style="padding-left: 15Px"><u>Stocks Information</u></h2>
     </div>
     <div>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-hover table-responsive-xl lead text-center">
             <thead>
-            <tr class="bg-info">
+            <tr bgcolor="white">
                 <th>Customer number</th>
                 <th>Symbol</th>
                 <th>Name</th>
@@ -45,7 +31,7 @@
             </thead>
             <tbody>
             {% for stock in stocks %}
-                <tr>
+                <tr bgcolor="white">
                     <td>{{ stock.customer }}</td>
                     <td>{{ stock.symbol }}</td>
                     <td>{{ stock.name }}</td>
@@ -54,14 +40,15 @@
                     <td>{{ stock.purchase_date }}</td>
                     <td><a href="{% url 'portfolio:stock_edit' pk=stock.pk %}"
                            class="btn btn-warning">Edit</a></td>
-                    <td><a href="{% url 'portfolio:stock_delete' pk=stock.pk %}" 
-                    onclick="return confirm('Are you sure you want to delete?')" 
+                    <td><a href="{% url 'portfolio:stock_delete' pk=stock.pk %}"
+                    onclick="return confirm('Are you sure you want to delete?')"
                     class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
+
      <div class="row">
             <a href="{% url 'portfolio:stock_new' %}" class="row"><span
                     class="btn btn-primary">Add Stock</span></a>
