--- a/portfolio/templates/registration/login.html
+++ b/portfolio/templates/registration/login.html
@@ -1,22 +1,15 @@
 {% extends "portfolio/base.html" %}
-{% load crispy_forms_tags %}
+{% block title %}Log In{% endblock title %}
+
+
+
 {% block content %}
-<body style="background-color:pink;">
-
-    {% if form.errors %}
-    <br />
-    <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
-    <br />
-    <br />
-    <form method="post" action="{% url 'login' %}">
-        {{ form|crispy }}
-        {% csrf_token %}
-
-
-        <input type="submit" value="login"/>
-        <input type="hidden" name="next" value="{{ next }}"/>
-
-    </form>
-</body>
+  <h1>Log-in</h1>
+  <p>Please, use the following form to log-in:</p>
+  <form action="." method="post">
+    {{ form.as_p }}
+    {% csrf_token %}
+    <p><input type="submit" value="Log-in"></p>
+  </form>
 {% endblock %}
+
