--- a/portfolio/templates/portfolio/customer_list.html
+++ b/portfolio/templates/portfolio/customer_list.html
@@ -21,7 +21,7 @@
     <h2 style="padding-left: 15Px"><u>Customer Information</u></h2>
     </div>
     <div>
-        <table class="table table-hover table-responsive-lg lead text-center">
+        <table class="table table-hover table-responsive-lg text-center">
             <thead>
             <tr bgcolor="white">
                 <th>Customer Number</th>
