--- a/portfolio/templates/portfolio/stock_list.html
+++ b/portfolio/templates/portfolio/stock_list.html
@@ -17,7 +17,7 @@
         <h2 style="padding-left: 15Px"><u>Stocks Information</u></h2>
     </div>
     <div>
-        <table class="table table-hover table-responsive-lg lead text-center">
+        <table class="table table-hover table-responsive-lg text-center">
             <thead>
             <tr bgcolor="white">
                 <th>Customer number</th>
