--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -12,27 +12,19 @@
     <title>Eagle Financial Services</title>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Welcome!</div>
-                <div class="panel-body">
-                    Eagle Financial Services, your Midwest Financial Services Partner.
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+ <header class="jumbotron my-4 table-responsive" style="background: white">
+      <p class="lead text-nowrap"><b>Eagle Financial Services, your Midwest Financial Services Partner</b></p>
+         </header>
+
 <div class="row">
-    <h1 style="padding-left: 15Px">Customer Portfolio</h1>
+    <h2 class="navbar-brand" style="padding-left: 15Px">Customer Portfolio</h2>
 </div>
 
 <div class="row">
-    <h2 style="padding-left: 15Px">Overall Portfolio Performance</h2>
+    <h2 class="navbar-brand" style="padding-left: 15Px"><u>Overall Portfolio Performance</u></h2>
 </div>
 <div class="row">
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-hover table-responsive-lg text-center">
         <thead>
             <tr class="bg-info">
                 <th>Portfolio Initial Investments</th>
@@ -51,10 +43,10 @@
 </div>
 
 <div class="row">
-    <h2 style="padding-left: 15Px">Stocks Information</h2>
+    <h2 class="navbar-brand" style="padding-left: 15Px"><u>Stocks Information</u></h2>
 </div>
 <div class="row">
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-hover table-responsive-lg text-center">
         <thead>
         <tr class="bg-info">
             <th>Customer</th>
@@ -85,7 +77,7 @@
         </tbody>
     </table>
 
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-hover table-responsive-lg text-center">
         <thead>
             <tr class="bg-info">
                 <th>Total of Initial Stocks</th>
@@ -101,12 +93,13 @@
             </tr>
         </tbody>
     </table>
+</div>
 
     <div class="row">
-        <h2 style="padding-left: 15Px">Investment Information</h2>
+        <h2  class="navbar-brand" style="padding-left: 15Px"><u>Investment Information</u></h2>
     </div>
     <div class="row">
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-hover table-responsive-lg text-center">
             <thead>
             <tr class="bg-info">
                 <th>Customer</th>
@@ -136,7 +129,7 @@
         </table>
     </div>
     <div class="row">
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-hover table-responsive-lg text-center">
             <thead>
                 <tr class="bg-info">
                     <th>Total of Initial Investments</th>
