--- a/portfolio/templates/portfolio/customer_edit.html
+++ b/portfolio/templates/portfolio/customer_edit.html
@@ -7,7 +7,7 @@
     <h1>Edit Customer</h1>
        <form action="" method="post">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Update</button>
+        <button type="submit" class="save btn btn-primary">Update</button>
     </form>
 </body>
 {% endblock %}
