--- a/portfolio/templates/portfolio/investment_new.html
+++ b/portfolio/templates/portfolio/investment_new.html
@@ -6,7 +6,7 @@
     <h1>Add a New Investment</h1>
     <form method="POST" class="investment-form">{% csrf_token %}
    {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button type="submit" class="save btn btn-primary">Save</button>
     </form>
 {% endblock %}
 
