--- a/portfolio/templates/portfolio/stock_new.html
+++ b/portfolio/templates/portfolio/stock_new.html
@@ -6,6 +6,6 @@
     <h1>Add a New Stock</h1>
     <form method="POST" class="stock-form">{% csrf_token %}
             {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button type="submit" class="save btn btn-primary">Save</button>
     </form>
 {% endblock %}
